# waterlens-blog

./: .gitignore  .gitmodules  Dockerfile  config-no-assoc.toml  config.toml  deploy.sh  grass  justfile  skylighting-wrapper.sh  tidy  tidy.cfg
.github/workflow/: git-sync.yml
.github/workflows/: git-sync.yml
assets/scss/: _extend.scss  _fonts.scss  _variables.scss
content/: 404.adoc  about.adoc  about.html  about.md  articles.html  booklist.md  hello.md  index.adoc  index.html  posts.adoc  posts.html  projects.adoc
content/articles/: personal-email-domain.html
content/posts/: a-tiny-regex-engine-with-AOT.md  adapton.adoc  cpp-template-imp.md  fast-monoid-crc32.adoc  fuck-disqus-ads.md  functional-programming-languages-and-compilations.md  hello.md  incr-sota.adoc  incr.adoc  making-proofs-in-coq.md  personal-email-domain.html  rust-enum.md
content/zh/: about.adoc  about.html  articles.html  index.adoc  index.html  posts.adoc  posts.html  projects.adoc
layouts/: index.html
layouts/_default/: baseof.html
public/: 404.html  about.html  articles.html  index.html  posts.html  projects.html  style.css
public/posts/: incr.html  (+4 more)
sass/: _code.scss  _fonts.scss  style.scss
static/: 404.html
styles/: _code.scss  style.scss
templates/: article-zh.html  article.html  base-zh.html  base.html  font.html  footer-zh.html  footer.html  header-nav-zh.html  header-nav.html  post-zh.html  post.html  util.html
wblog/: Cargo.toml
wblog/src/: build_graph.rs  cli.rs  commands.rs  console_progress.rs  lib.rs  main.rs  output.rs  paths.rs  serve.rs  tools.rs  watch.rs
(+178 files in other folders)
