[package]
name = "wblog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
grass = "0.13.4"
live-server = "0.11.1"
n2o5 = { git = "https://github.com/lynzrand/n2o5.git", rev = "551c0254b8218347b4f4acf9f5d9fca7fbfb7f74" }
notify-debouncer-mini = "0.7.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "sync", "net", "time", "signal"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
